presentecion casi terminada

--- a/acercade.html
+++ b/acercade.html
@@ -6,23 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de...</title>
-    
-    <script src="jquery-3.6.0.js"></script>
     <script src="acercade.js"></script>
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="acercade.css" />
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LT1QK1KEJ0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-LT1QK1KEJ0');
-</script>
+
 <body>
     <div id="cabeceraAcerca">
-        <img  src="imagenes/foto1.png" alt="" width="104.2" height="140.8"  />
+        <img src="imagenes/FOTOPERFILCIRCULAR.png" alt="" width="104.2" height="140.8" />
         <a id="a1Acerca" href="index.html">Al inicio</a>
     </div>
     <div id="cuerpoAcerca">
