--- a/acercade.html
+++ b/acercade.html
@@ -13,7 +13,7 @@
 <!-- Google tag (gtag.js) -->
 
 
-<body>
+<body id="body">
     <div id="cabeceraAcerca">
         <img src="imagenes/FOTOPERFILCIRCULAR.png" alt="" width="104.2" height="140.8" />
         <a id="a1Acerca" href="index.html">Al inicio</a>
