--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="asistentepoetico.css" />
   <link rel="stylesheet" href="index.css" />
-  <script src="jquery-3.6.0.js"></script>
+  
   <script src="asistentepoetico.js"></script>
   <script src="funciones.js"></script>
 
@@ -20,7 +20,7 @@
 
 
 
-<body>
+<body id="body">
   <div class="principal">
     <header id="cabecera">
 
