--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <link rel="stylesheet" href="asistentepoetico.css" />
   <link rel="stylesheet" href="index.css" />
-  
+
   <script src="asistentepoetico.js"></script>
-  <script src="funciones.js"></script>
+
 
 </head>
 
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <footer id="pie">pie</footer>
+    <footer id="pie"></footer>
   </div>
 </body>
 
