--- a/acercade.html
+++ b/acercade.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de...</title>
-    <script src="acercade.js"></script>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="acercade.css" />
 </head>
@@ -14,25 +13,32 @@
 
 
 <body id="body">
-    <div id="cabeceraAcerca">
-        <img src="imagenes/FOTOPERFILCIRCULAR.png" alt="" width="104.2" height="140.8" />
-        <a id="a1Acerca" href="index.html">Al inicio</a>
-    </div>
-    <div id="cuerpoAcerca">
-        <p>Acerca de esta aplicación: <br /><br />
-            Esta es la versión inicial (V1.0) del que espero sea un verdadero asistente para todos aquellos poetas que
-            quieran incursionar en el mundo de la poesía clásica.
-            Uno de los tópicos más difíciles para todo aquel que comienza en la poesía clásica es la sinalefa. Por eso
-            he tenido especial cuidado en ella, y me he basado, entre otros, para su determinación en un trabajo de
-            Justo Fernández López. No omito manifestar que existe la posibilidad de errores de interpretación así como
-            en el algoritmo de determinación; por lo tanto, les quedaría muy agradecido por su realimentación a la hora
-            de encontrar posibles errores.
-            Un agradecimiento especial a la poeta Mardy Mesén Rodríguez, por auxiliarme prontamente en la ocasión que le
-            consulte, proporcionándome referencia bibliográfica que me fue de gran utilidad.
-            Espero que esta aplicación les sea de mucha ayuda, así como sus posteriores versiones. <br /> <br />Nota
-            aclaratoria: Esta aplicación no analiza prefijos a la hora de hacer el silabeo ortográfico, por lo que
-            sugiero tomar encuenta este detalle.
-        </p>
+    <div class="principal">
+        <div id="cabeceraAcerca">
+            <img src="imagenes/FOTOPERFILCIRCULAR.png" alt="" width="104.2" height="140.8" />
+            <a id="a1Acerca" href="index.html">Al inicio</a>
+        </div>
+        <div id="cuerpoAcerca">
+            <p>Acerca de esta aplicación: <br /><br />
+                Esta es la versión inicial (V1.0) del que espero sea un verdadero asistente para todos aquellos poetas
+                que
+                quieran incursionar en el mundo de la poesía clásica.
+                Uno de los tópicos más difíciles para todo aquel que comienza en la poesía clásica es la sinalefa. Por
+                eso
+                he tenido especial cuidado en ella, y me he basado, entre otros, para su determinación en un trabajo de
+                Justo Fernández López. No omito manifestar que existe la posibilidad de errores de interpretación así
+                como
+                en el algoritmo de determinación; por lo tanto, les quedaría muy agradecido por su realimentación a la
+                hora
+                de encontrar posibles errores.
+                Un agradecimiento especial a la poeta Mardy Mesén Rodríguez, por auxiliarme prontamente en la ocasión
+                que le
+                consulte, proporcionándome referencia bibliográfica que me fue de gran utilidad.
+                Espero que esta aplicación les sea de mucha ayuda, así como sus posteriores versiones. <br /> <br />Nota
+                aclaratoria: Esta aplicación no analiza prefijos a la hora de hacer el silabeo ortográfico, por lo que
+                sugiero tomar encuenta este detalle.
+            </p>
+        </div>
     </div>
 </body>
 
